RESOLVED FIXED137081
bmalloc: cleaned up fast path vs slow path
https://bugs.webkit.org/show_bug.cgi?id=137081
Summary bmalloc: cleaned up fast path vs slow path
Geoffrey Garen
Reported 2014-09-24 16:01:40 PDT
bmalloc: cleaned up fast path vs slow path
Attachments
Patch (15.39 KB, patch)
2014-09-24 16:12 PDT, Geoffrey Garen
sam: review+
Geoffrey Garen
Comment 1 2014-09-24 16:12:38 PDT
Geoffrey Garen
Comment 2 2014-09-30 11:38:02 PDT
Note You need to log in before you can comment on or make changes to this bug.